# germinate

./: Cargo.toml  README.md  build.sh
src/: builder.rs  config.rs  container.rs  db_client.rs  dialogue.rs  file_system.rs  formatters.rs  lib.rs  linters.rs  main.rs  module.rs  package_manager.rs  template_generator.rs  test_frameworks.rs  toml_parser.rs
src/module/: mod.rs
stacks/: index.rs  ssrjs.toml
templates/laravel/: stack_template.toml
templates/rsapi/: stack_template.toml
templates/rsapi/after_install/frontend/: .eslintrc
templates/rsapi/after_install/src/: main.rs
templates/rsapi/before_install/: .gitignore
templates/rsapi/docker/: .dockerignore  docker-compose.yml  docker-compose.yml.template  dockerfile.template
templates/rsapi/docker/app/: Dockerfile.dev  Dockerfile.prod
templates/rscli/: stack_template.toml
templates/rscli/before_install/: .gitignore
templates/rsweb/: stack_template.toml
templates/rsweb/after_install/frontend/: tsconfig.json
templates/ssrjs/: astro.config.mjs  eslint.config.js  package.json  ssrjs.toml  stack_template.toml
templates/tsapi/: stack_template.toml
templates/tsapi/after_install/src/: index.ts
templates/tsapi/docker/: docker-compose.yml
templates/tsapi/docker/app/: Dockerfile.dev  Dockerfile.prod
templates/tsapi/docker/rootfs/etc/: entrypoint.dev.sh  entrypoint.prod.sh
templates/tscli/: stack_template.toml
templates/tscli/after_install/src/: index.ts
templates/tsweb/: stack_template.toml
templates/tsweb/after_install/: astro.config.mjs
test/__mocks__/: _test.toml
(+2 files in other folders)
