[package]
name = "germinate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.10.4"
indicatif = "0.17.5"
slug = "0.1.4"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
toml = "0.7.6"
serde = "1.0.170"
